--- a/settings/project.json
+++ b/settings/project.json
@@ -166,6 +166,7 @@
     "tub",
     "obstacle"
   ],
+  "start-scene": "7b718c8e-7a4f-4e53-8eeb-f503f4a94d96",
   "design-resolution-width": 1024,
   "design-resolution-height": 768,
   "fit-width": false,
@@ -177,7 +178,7 @@
     "height": 640,
     "width": 1280
   },
-  "last-module-event-record-time": 1594963122279,
+  "last-module-event-record-time": 1598334635362,
   "assets-sort-type": "name",
   "facebook": {
     "appID": "",
