changes to library

--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,7 @@ build/jsb-default/jsb-adapter/
 build/jsb-default/main.js
 build/jsb-default/publish/
 build/jsb-default/res/
+build/jsb-default/remote/
 build/jsb-default/simulator/
 build/jsb-default/src/
 build/jsb-default/assets/
