Next button added

--- a/settings/project.json
+++ b/settings/project.json
@@ -195,6 +195,5 @@
       "enable": false
     }
   },
-  "preview-port": 7456,
-  "start-scene": "7b718c8e-7a4f-4e53-8eeb-f503f4a94d96"
+  "preview-port": 7456
 }
