Executing button on touchend rather than click event
Game will repeat for one more iteration after clicking on the continue button-( inconsistent) Fixes #340

--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ build/jsb-default/assets/
 build/jsb-default/frameworks/runtime-src/proj.android-studio/app/.externalNativeBuild
 
 build/web-desktop
+build/web-mobile
 chimple.keystore
 content/
 assets/courses/en/course-en/
