--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ assets/courses/en/course-en/
 assets/courses/en/course-en.meta
 assets/courses/maths/course-maths/
 assets/courses/maths/course-maths.meta
+assets/courses/puzzle/course-puzzle/
+assets/courses/puzzle/course-puzzle.meta
