--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ assets/courses/puzzle/course-puzzle/
 assets/courses/puzzle/course-puzzle.meta
 assets/courses/hi/course-hi/
 assets/courses/hi/course-hi.meta
+
+node_modules/
