changes to start

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,5 @@ assets/courses/puzzle/course-puzzle/
 assets/courses/puzzle/course-puzzle.meta
 assets/courses/hi/course-hi/
 assets/courses/hi/course-hi.meta
+
+scripts/python/venv/
