Testing ixo api

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/chimple/chimple#readme",
   "dependencies": {
+    "@ixo/client-sdk": "^1.0.11",
     "firebase": "^7.24.0"
   }
 }
