Fixed Marathi Font loading issue and added course-mr in gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,8 @@ assets/courses/puzzle/course-puzzle/
 assets/courses/puzzle/course-puzzle.meta
 assets/courses/hi/course-hi/
 assets/courses/hi/course-hi.meta
+assets/courses/hi/course-mr/
+assets/courses/hi/course-mr.meta
 
 scripts/python/venv/
 scripts/python/serviceAccountKey.json
